remove DefaultMutableTreeNode